--- a/index.html
+++ b/index.html
@@ -46,8 +46,6 @@
                         <p class="text">No Download</p>
                      <i class="fa-solid fa-user-group"></i>
                     <p class="text">1000s of supported online games</p>
-                
-            
                 </div>
                 <button class="btn-primary-btn">Sign In</button>
                 <button class="btn-primary-bth">Go Rogue</button>
@@ -87,7 +85,7 @@
               <div class="online-gamer-card">
                 <img src="images/Rectangle 4.png" alt="">
                 <p>No Download. No Installs. Play games <br> Instantly on Game</p>
-              </div>
+                </div>            
               <div class="online-gamer-card">
                 <img src="images/Rectangle 5.png" alt="">
                 <p>Did you score? #unblockedgames #school</p>
@@ -133,35 +131,35 @@
             </div>
             <div class="games-title">
                 <img src="images/Rectangle 12.png" alt="">
-                <p>Action Games</p>
+                <p>Adventure Games</p>
             </div>
             <div class="games-title">
                 <img src="images/Rectangle 13.png" alt="">
-                <p>Action Games</p>
+                <p>Arcade Games</p>
             </div>
             <div class="games-title">
                 <img src="images/Rectangle 14.png" alt="">
-                <p>Action Games</p>
+                <p>Educational Games</p>
             </div>
             <div class="games-title">
                 <img src="images/Rectangle 15.png" alt="">
-                <p>Action Games</p>
+                <p>Word Games</p>
             </div>
             <div class="games-title">
                 <img src="images/Rectangle 16.png" alt="">
-                <p>Action Games</p>
+                <p>Role Palying Games</p>
             </div>
             <div class="games-title">
                 <img src="images/Rectangle 17.png" alt="">
-                <p>Action Games</p>
+                <p>Music & Audio GamesAct</p>
             </div>
             <div class="games-title"> 
                 <img src="images/Rectangle 18.png" alt="">
-                <p>Action Games</p>
+                <p>Puzzle Games</p>
             </div>
             <div class="games-title">
                 <img src="images/Rectangle 19.png" alt="">
-                <p>Action Games</p>
+                <p>Strategy Games</p>
             </div>
         </div>
       </section>
@@ -182,10 +180,9 @@
             <p>My Account</p>
         </div>
         <div class="footer-icons">
-            <i class="fa-brands fa-apple" style="color: #ffffff;"></i>
-            <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
-            <i class="fa-brands fa-instagram" style="color: #f0f2f5;"></i>
-            <i class="fa-brands fa-youtube" style="color: #ffffff;"></i>
+            <img class="icon" src="images/facebook 1.jpg" alt="">
+            <img class="icon" src="images/instagram 1.png" alt="">
+            <img class="icon" src="images/Group 49.jpg" alt="">
         </div>
           <div class="fopter-text-1">
             <h5>Terms and Conditions</h5>
